# WSTG-CLI

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/clio/: __main__.py  __run__.py
src/clio/cli/: scanner.py
src/clio/network/: requester.py
src/clio/pipeline/: engine.py
