[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clio"
version = "0.1.0"
description = "OWASP CLI security tool"
authors = [
{ name = "Yu Xiang Yang Xu" }
]
requires-python = ">=3.8"

dependencies = [
    "click"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
